# autoAnimeR

./: .gitignore  LICENSE  README.md  docker-compose.yaml
.github/workflows/: rust.yml
app/: .env  Cargo.toml  db_init.sh  init.sql  log4rs.yaml
app/config/: config.yaml  defaultConfig.yaml  log4rs.yaml  subtitle_config.yaml
app/src/: main.rs  routers.rs  schema.rs
app/src/api/: anime.rs  do_anime_task.rs  do_anime_task_bak.rs  download.rs  mod.rs  setting.rs  spider_task.rs
app/src/dao/: anime_broadcast.rs  anime_filter.rs  anime_list.rs  anime_progress.rs  anime_seed.rs  anime_subgroup.rs  anime_task.rs  mod.rs
app/src/error/: error.rs
app/src/models/: anime_broadcast.rs  anime_filter.rs  anime_list.rs  anime_progess.rs  anime_seed.rs  anime_subgroup.rs  anime_task.rs  mod.rs
app/src/mods/: anime_filter.rs  config.rs  mod.rs  qb_api.rs  spider.rs  video_proccessor.rs  web_socket.rs
app/src/v2/: anime.rs  common.rs  mod.rs  setting.rs  video.rs  ws.rs
app/static/css/: detail.css  setting.css
app/static/js/: anime.js  detail.js  download.js  setting.js
app/templates/: anime.html  base.html  detail.html  download.html  index.html  setting.html  test.html
docs/: cross_compile.md
