[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.6"
regex = "1.5.4"
serde_json = { version = "1.0.2", optional = true }
tera = { version = "1.19.1", default-features = false }
actix-files = "0.6.2"
actix-web = "4.1.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web-actors = "3.0.0"