[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["multipart", "cookies"] }
select = "0.6"
regex = "1.5.4"
serde_json = "1.0.2"
serde_yml = "0.0.10"
tera = { version = "1.19.1", default-features = false }
actix-files = "0.6.2"
actix-web = "4.1.0"
diesel = { version = "2.1.3", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.139", features = ["derive"] }
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
actix = "0.13.3"
actix-rt = "2.9.0"
actix-web-actors = "4.3.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
env_logger = "0.11.3"
log = "0.4.18"
log4rs = "1.3.0"
ffmpeg-next = "7.0.0"
rsubs-lib = "=0.1.10"
once_cell = "1.17"